--- a/projects/Soal Matematika.html
+++ b/projects/Soal Matematika.html
@@ -645,7 +645,7 @@
     <!-- <p>Terakhir diupdate: 27 Mei 2025</p> -->
     <!-- <p>Terakhir diupdate: 30 Juli 2025</p> -->
     <!-- <p>Terakhir diupdate: 1 Agustus 2025</p> -->
-    <p>Terakhir diupdate: 6 Agustus 2025</p>
+    <p>Terakhir diupdate: 8 Agustus 2025</p>
 
     <script>
         // Time
@@ -1543,7 +1543,112 @@
                     hasil = `${xa}/${xb}`;
                 }
                 soal_check = false;
-			}
+			} else if (e1.index == 22) {
+                // A ∩ B
+                // function getIntersection(a, n, b, m) {
+                function intersection(a, b) {
+                    let unionSet = new Set();
+                    let intersectionSet = new Set();
+                    for (let i = 0; i < a.length; i++)
+                        unionSet.add(a[i]);
+                    // console.log("Intersection:");
+                    for (let i = 0; i < b.length; i++) {
+                        if (unionSet.has(b[i])) {
+                            intersectionSet.add(b[i]);
+                        }
+                    }
+                    let ans = [];
+                    for (let k of intersectionSet) {
+                        ans.push(k);
+                    }
+                    // console.log(ans);
+                    return ans;
+                }
+                // A ∪ B
+                // function getUnion(a, n, b, m) {
+                function union(a, b) {
+                    let s = new Set();
+                    for (let i = 0; i < a.length; i++)
+                        s.add(a[i]);
+                    for (let i = 0; i < b.length; i++)
+                        s.add(b[i]);
+                    let arr = [];
+                    for (let itr of s)
+                        arr.push(itr);
+                    arr.sort(function (a, b) {return a - b;})
+                    // console.log("union:");
+                    // console.log(arr);
+                    return arr;
+                }
+                if (e1_bentuk.index == 0) {
+                    // console.log(intersection([1,2,3,7],[2,3,5]));
+                    // console.log(union([1,2,3,7],[2,3,5]));
+                    // console.log(union([1,2,3,7],[2,3,5]) == [1,2,3,5,7]);
+                    // console.log([1,2,3,5,7] == [1,2,3,5,7]);
+                    himpunan_A = [];
+                    himpunan_A_teks = '';
+                    himpunan_A_length = Math.floor(2+5*Math.random()**2);
+                    // himpunan_angka = 0;
+                    while (himpunan_A.length < himpunan_A_length) {
+                        if (himpunan_A.length == 0) {
+                            himpunan_angka = Math.floor(1+3*Math.random());
+                            himpunan_A.push(himpunan_angka);
+                        } else {
+                            himpunan_angka += Math.floor(1+2*Math.random());
+                            himpunan_A.push(himpunan_angka);
+                            himpunan_A_teks += ',';
+                        }
+                        // himpunan_A_teks += `${himpunan_A[-1]}`;
+                        himpunan_A_teks += himpunan_angka;
+                    }
+                    himpunan_B = [];
+                    himpunan_B_teks = '';
+                    himpunan_B_length = Math.floor(2+5*Math.random()**2);
+                    while (himpunan_B.length < himpunan_B_length) {
+                        if (himpunan_B.length == 0) {
+                            himpunan_angka = Math.floor(1+3*Math.random());
+                            himpunan_B.push(himpunan_angka);
+                        } else {
+                            himpunan_angka += Math.floor(1+2*Math.random());
+                            himpunan_B.push(himpunan_angka);
+                            himpunan_B_teks += ',';
+                        }
+                        himpunan_B_teks += himpunan_angka;
+                    }
+                    // soal_teks = `Diketahui himpunan /(A = /{1,2,3,4,5/}/) dan himpunan /(B = /{2,3,6,7/}/). Jika himpunan diurutkan dari terkecil hingga terbesar, maka /(A ∩ B/) adalah ...`;
+                    soal_teks = `Diketahui himpunan /(A = /{${himpunan_A_teks}/}/) dan himpunan /(B = /{${himpunan_B_teks}/}/). Jika himpunan diurutkan dari terkecil hingga terbesar, maka /(A ∩ B/) adalah ...`;
+                    // console.log(intersection(himpunan_A,himpunan_B));
+                    hasil = intersection(himpunan_A,himpunan_B);
+                } else if (e1_bentuk.index == 1) {
+                } else if (e1_bentuk.index == 2) {
+                    // nama_tempat_list = ['toko buah','pasar','supermarket'];
+                    mathrandom = Math.random()
+                    if (mathrandom < 0.25) {
+                        soal_teks = `Ada 2 himpunan, yaitu himpunan A dan himpunan B. Banyaknya anggota di himpunan A adalah 20, sedangkan banyaknya anggota di himpunan B adalah 30. Jika banyaknya anggota di himpunan A dan B adalah 5, maka banyaknya anggota A atau B adalah ...`;
+                    } else if (mathrandom < 0.5) {
+                        mathrandom = Math.random()
+                        if (mathrandom < 0.25) {
+                            nama1_list = ['matematika','Bahasa Indonesia','Bahasa Inggris','fisika','kimia','biologi'];
+                        } else if (mathrandom < 0.5) {
+                            nama1_list = ['menggambar','melukis','mewarnai','main piano','main gitar'];
+                        } else if (mathrandom < 0.75) {
+                            nama1_list = ['berenang','sepak bola','basket','futsal','tenis'];
+                        } else {
+                            nama1_list = ['berenang','sepak bola','basket','futsal','tenis'];
+                        }
+                        nama2_list = ['bisa','suka','jago','gemar','hobi','pintar'];
+                        nama1a = nama1_list[parseInt(nama1_list.length*Math.random())];
+                        nama1b = nama1_list[parseInt(nama1_list.length*Math.random())];
+                        nama2 = nama2_list[parseInt(nama1_list.length*Math.random())];
+                        while (nama1a == nama1b) {
+                            nama1b = nama1_list[parseInt(nama1_list.length*Math.random())];
+                        }
+                        soal_teks = `Di sekolah X, jumlah siswanya adalah 140 siswa. Banyaknya siswa yang ${nama2} ${nama1a} adalah 40 siswa, sedangkan banyaknya siswa yang ${nama2} ${nama1b} adalah 70 siswa. Jika banyaknya siswa yang ${nama2} kedua-duanya adalah 25 siswa, maka banyaknya siswa yang ${nama2} suka kedua-duanya adalah ...`;
+                    } else if (mathrandom < 0.75) {
+                    } else {
+                    }
+                }
+            }
 			
 			function bersusun(a,b,tanda) {
                 text = `
@@ -1859,23 +1964,39 @@
                         // soal_teks = `Solusi x dari &nbsp;<span style="font-size:20px">/(2x + 3 = 5/)`.replaceAll("/","&#x005c");
                         // soal_teks += `</span>&nbsp; adalah ...`
                         // soal_teks = `Solusi x dari &nbsp;/(${soal_teks}/)`
-                        soal_teks += `<br><br><span style="color:yellow">Jenis pertanyaan ini belum tersedia</style>`;
                         soal_teks = convert_to_math(soal_teks);
+                        // soal_teks += `<br><br><span style="color:yellow">Jenis pertanyaan ini belum tersedia</style>`;
                     } else if (e1.index == 19) {
                         soal_teks = `Diketahui sistem persamaan linear dua variabel yang terdapat dibawah ini:<br><div style="padding-top:10px"></div><span style="font-size:18px">&nbsp;&nbsp;/(x+y=2/)<br>&nbsp;&nbsp;/(2x+3y=5/)</span><br><br>Solusi dari x dan y berturut-turut adalah ...`.replaceAll("/","&#x005c").replaceAll("<&#x005c","</");
                         soal_teks += `<br><br><span style="color:yellow">Jenis pertanyaan ini belum tersedia</style>`;
                     } else if (e1.index == 20) {
-                        soal_teks = `Solusi x dari &nbsp;<span style="font-size:20px">/(x^2 - 3x + 2 = 0/)`.replaceAll("/","&#x005c");
-                        soal_teks += `</span>&nbsp; adalah ...`
-                        soal_teks += `<br><br><span style="color:yellow">Jenis pertanyaan ini belum tersedia</style>`;
+                        if (e1_bentuk.index == 0) {
+                            soal_teks = `Jika /({5 /over /sqrt{12}}/) dapat dinyatakan ke dalam bentuk /({a/sqrt{b}} /over c/), dimana /(FPB(a,c) = 1/), dan b adalah bebas kuadrat, maka nilai dari a+b+c adalah ...`;
+                            soal_teks = convert_to_math(soal_teks);
+                            soal_teks += `<br><br><span style="color:yellow">Jenis pertanyaan ini belum tersedia</style>`;
+                        } else if (e1_bentuk.index == 1) {
+                            soal_teks = convert_to_math(soal_teks);
+                            soal_teks += `<br><br><span style="color:yellow">Jenis pertanyaan ini belum tersedia</style>`;
+                        } else {
+                            soal_teks = convert_to_math(soal_teks);
+                            soal_teks += `<br><br><span style="color:yellow">Jenis pertanyaan ini belum tersedia</style>`;
+                        }
                     } else if (e1.index == 21) {
                         soal_teks = `Solusi x dari &nbsp;<span style="font-size:20px">/(x^2 - 3x + 2 = 0/)`.replaceAll("/","&#x005c");
                         soal_teks += `</span>&nbsp; adalah ...`
                         soal_teks += `<br><br><span style="color:yellow">Jenis pertanyaan ini belum tersedia</style>`;
                     } else if (e1.index == 22) {
-                        // /cup (∪) /cap (∩)
-                        soal_teks = `Diketahui himpunan /(A = /{1,2,3,4,5/}/) dan himpunan /(B = /{2,3,6,7/}/). Maka /(A ∩ B/) adalah ...`
-                        soal_teks = convert_to_math(soal_teks);
+                        if (e1_bentuk.index == 0) {
+                            // /cup (∪) /cap (∩)
+                            // soal_teks = `Diketahui himpunan /(A = /{1,2,3,4,5/}/) dan himpunan /(B = /{2,3,6,7/}/). Maka /(A ∩ B/) adalah ...`
+                            soal_teks = convert_to_math(soal_teks);
+                        } else if (e1_bentuk.index == 1) {
+                            soal_teks = convert_to_math(soal_teks);
+                        } else if (e1_bentuk.index == 2) {
+                            soal_teks = convert_to_math(soal_teks);
+                        } else {
+                            
+                        }
                     } else if (e1.index == 24) {
                         soal_teks = `Hasil dari /(2^6/) adalah ...`
                         soal_teks = convert_to_math(soal_teks);
@@ -2153,10 +2274,9 @@
                 document.getElementById("bentuk-sub").style.display = 'block';
                 if (change) {
                     document.getElementById("pilihan-bentuk-sub").innerHTML = `
-                        <option style="color:gray">Pemfaktoran Linear</option>
-                        <option style="color:gray">Pemfaktoran Kuadrat</option>
-                        <option style="color:gray">Pemfaktoran Derajat Tinggi</option>
-                        <option style="color:gray">Pemfaktoran Campuran</option>
+                        <option style="color:gray">Rasionalkan Akar Kuadrat</option>
+                        <option style="color:gray">Campuran Variabel</option>
+                        <option style="color:gray">Campuran Variabel 2</option>
                     `;
                 }
             } else if (e1.index == 22) {
@@ -2165,6 +2285,8 @@
                     document.getElementById("pilihan-bentuk-sub").innerHTML = `
                         <option style="color:gray">Dua himpunan</option>
                         <option style="color:gray">Tiga himpunan</option>
+                        <option style="color:gray">Anggota dalam dua himpunan</option>
+                        <option style="color:gray">Anggota dalam tiga himpunan</option>
                         <option style="color:gray">Himpunan bagian</option>
                         <option style="color:gray">Himpunan bersyarat</option>
                     `;
@@ -2689,14 +2811,28 @@
                 // e1.index == 6 & e1_bentuk.index == 0
                 if (e1.index <= 5 || (e1.index == 6 && (e1_bentuk.index == 0 || e1_bentuk.index == 2)) || e1.index == 7 || e1.index == 8 || e1.index == 10 || e1.index == 11 || e1.index == 12 || e1.index == 13) {
                     angka = parseInt(angka_awal);
+                    jawaban_check = angka == hasil;
                     // hasil = hasil;
                 } else if (e1.index == 6 && e1_bentuk.index == 4) {
                     angka = angka_awal.toLowerCase().replaceAll('*','x').replaceAll('.','x').replaceAll(' ','');
                     hasil = hasil.replaceAll(' ','');
+                    jawaban_check = angka == hasil;
                     // console.log(angka, hasil);
+                } else if (e1.index == 22 && e1_bentuk.index == 0) {
+                    if (angka_awal == '{}') {
+                        angka = [];
+                    } else {
+                        angka = angka_awal.toLowerCase().replaceAll('{','').replaceAll('}','').replaceAll(',',' ').split(' ');
+                    }
+                    // console.log(angka);
+                    jawaban_check = true;
+                    for (let i = 0; i < angka.length; i++) {
+                        jawaban_check &= angka[i] == hasil[i];
+                    }
                 } else {
                     angka = angka_awal.toLowerCase();
                     hasil = hasil.toLowerCase();
+                    jawaban_check = angka == hasil;
                 }
                 // if (e1.index == 0) {
                 //     tanda = ' + ';
@@ -2707,7 +2843,7 @@
                 }
                 // if (soal2 = '') soal2 = soal;
                 // if (angka == hasil) {
-                if (angka == hasil) {
+                if (jawaban_check) {
                     // jawaban_teks = `Jawabannya benar<br><br> ${soal} = ${hasil2}`;
                     if (soal_check) {
                         jawaban_teks = `Jawabannya benar<br><br>${soal} = ${angka_awal}`;
