--- a/projects/Soal Matematika.html
+++ b/projects/Soal Matematika.html
@@ -646,7 +646,8 @@
     <!-- <p>Terakhir diupdate: 27 Mei 2025</p> -->
     <!-- <p>Terakhir diupdate: 30 Juli 2025</p> -->
     <!-- <p>Terakhir diupdate: 1 Agustus 2025</p> -->
-    <p>Terakhir diupdate: 29 Agustus 2025</p>
+    <!-- <p>Terakhir diupdate: 29 Agustus 2025</p> -->
+    <p>Terakhir diupdate: 3 September 2025</p>
 
     <script>
         // Time
@@ -1685,40 +1686,55 @@
                     // console.log(union([1,2,3,7],[2,3,5]));
                     // console.log(union([1,2,3,7],[2,3,5]) == [1,2,3,5,7]);
                     // console.log([1,2,3,5,7] == [1,2,3,5,7]);
-                    himpunan_A = [];
-                    himpunan_A_teks = '';
-                    himpunan_A_length = Math.floor(2+5*Math.random()**2);
-                    // himpunan_angka = 0;
-                    while (himpunan_A.length < himpunan_A_length) {
-                        if (himpunan_A.length == 0) {
-                            himpunan_angka = Math.floor(1+3*Math.random());
+                    prime_list = [2,3,5,7,11,13,17,19,23,29,31,37,41,43,47,53,59,61,67,71,73,79,83,89,97];
+                    mathrandom = Math.random();
+                    if (mathrandom < 1.1) {
+                        himpunan_A = [];
+                        himpunan_A_teks = '';
+                        himpunan_A_length = Math.floor(2+5*Math.random()**2);
+                        while (himpunan_A.length < himpunan_A_length) {
+                            himpunan_angka = 0;
+                            while (himpunan_angka == 0 || himpunan_A.includes(himpunan_angka)) {
+                                himpunan_angka = Math.floor(1+(himpunan_A_length+3)*Math.random());
+                            }
+                            // if (himpunan_A.length >= 1) himpunan_A_teks += ',';
                             himpunan_A.push(himpunan_angka);
-                        } else {
-                            himpunan_angka += Math.floor(1+2*Math.random());
-                            himpunan_A.push(himpunan_angka);
-                            himpunan_A_teks += ',';
+                            // himpunan_A_teks += himpunan_angka;
                         }
-                        // himpunan_A_teks += `${himpunan_A[-1]}`;
-                        himpunan_A_teks += himpunan_angka;
-                    }
-                    himpunan_B = [];
-                    himpunan_B_teks = '';
-                    himpunan_B_length = Math.floor(2+5*Math.random()**2);
-                    while (himpunan_B.length < himpunan_B_length) {
-                        if (himpunan_B.length == 0) {
-                            himpunan_angka = Math.floor(1+3*Math.random());
-                            himpunan_B.push(himpunan_angka);
-                        } else {
-                            himpunan_angka += Math.floor(1+2*Math.random());
-                            himpunan_B.push(himpunan_angka);
-                            himpunan_B_teks += ',';
+                        himpunan_A.sort();
+                        for (let i = 0; i < himpunan_A.length; i++) {
+                            if (i == 0) {himpunan_A_teks += himpunan_A[i];}
+                            else {himpunan_A_teks += (',' + himpunan_A[i]);}
                         }
-                        himpunan_B_teks += himpunan_angka;
+                        himpunan_B = [];
+                        himpunan_B_teks = '';
+                        himpunan_B_length = Math.floor(2+5*Math.random()**2);
+                        while (himpunan_B.length < himpunan_B_length) {
+                            himpunan_angka = 0;
+                            while (himpunan_angka == 0 || himpunan_B.includes(himpunan_angka)) {
+                                himpunan_angka = Math.floor(1+(himpunan_B_length+3)*Math.random());
+                            }
+                            himpunan_B.push(himpunan_angka);
+                        }
+                        himpunan_B.sort();
+                        for (let i = 0; i < himpunan_B.length; i++) {
+                            if (i == 0) {himpunan_B_teks += himpunan_B[i];}
+                            else {himpunan_B_teks += (',' + himpunan_B[i]);}
+                        }
                     }
                     // soal_teks = `Diketahui himpunan /(A = /{1,2,3,4,5/}/) dan himpunan /(B = /{2,3,6,7/}/). Jika himpunan diurutkan dari terkecil hingga terbesar, maka /(A ∩ B/) adalah ...`;
-                    soal_teks = `Diketahui himpunan /(A = /{${himpunan_A_teks}/}/) dan himpunan /(B = /{${himpunan_B_teks}/}/). Jika himpunan diurutkan dari terkecil hingga terbesar, maka /(A ∩ B/) adalah ...`;
-                    // console.log(intersection(himpunan_A,himpunan_B));
-                    hasil = intersection(himpunan_A,himpunan_B);
+                    mathrandom = Math.random();
+                    if (mathrandom < 0.5) {
+                        soal_teks = `Diketahui himpunan \\(A = \\{${himpunan_A_teks}\\}\\) dan himpunan \\(B = \\{${himpunan_B_teks}\\}\\). Jika himpunan diurutkan dari terkecil hingga terbesar, maka \\(A ∩ B\\) adalah ...`;
+                        // console.log(intersection(himpunan_A,himpunan_B));
+                        hasil = intersection(himpunan_A,himpunan_B);
+                    } else {
+                        soal_teks = `Diketahui himpunan \\(A = \\{${himpunan_A_teks}\\}\\) dan himpunan \\(B = \\{${himpunan_B_teks}\\}\\). Jika himpunan diurutkan dari terkecil hingga terbesar, maka \\(A ∪ B\\) adalah ...`;
+                        // console.log(intersection(himpunan_A,himpunan_B));
+                        hasil = union(himpunan_A,himpunan_B);
+                    }
+                    soal_teks = `Diketahui himpunan \\(A = \\{x&nbsp\\ |\\ 1 \\leq x \\leq 30, x \\in bilangan\\ prima \\}\\) dan himpunan \\(B = \\{3,4,5,6\\}\\). Jika himpunan diurutkan dari terkecil hingga terbesar, maka \\(A ∩ B\\) adalah ...`;
+                    hasil = '{' + hasil.toString() + '}';
                 } else if (e1_bentuk.index == 1) {
                 } else if (e1_bentuk.index == 2) {
                     // nama_tempat_list = ['toko buah','pasar','supermarket'];
@@ -3008,16 +3024,20 @@
                     jawaban_check = angka == hasil;
                     // console.log(angka, hasil);
                 } else if (e1.index == 22 && e1_bentuk.index == 0) {
-                    if (angka_awal == '{}') {
+                    /* if (angka_awal == '{}') {
                         angka = [];
                     } else {
                         angka = angka_awal.toLowerCase().replaceAll('{','').replaceAll('}','').replaceAll(',',' ').split(' ');
                     }
                     // console.log(angka);
                     jawaban_check = true;
-                    for (let i = 0; i < angka.length; i++) {
+                    for (let i = 0; i < hasil.length; i++) {
                         jawaban_check &= angka[i] == hasil[i];
                     }
+                    jawaban_check = angka.length == hasil.length; */
+                    angka = angka_awal.replaceAll(' ','');
+                    jawaban_check = angka == hasil;
+                    soal_check = false;
                 } else {
                     angka = angka_awal.toLowerCase();
                     hasil = hasil.toLowerCase();
